--- a/res/drawable/show_note_selector.xml
+++ b/res/drawable/show_note_selector.xml
@@ -1,6 +1,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     
-    <item android:state_pressed="true" android:drawable="@drawable/list_icon_2"/>
+    <item android:state_pressed="true" android:drawable="@drawable/list_show_note"/>
     <item android:drawable="@drawable/grid_show_note"/>
     
 </selector>
