--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="title_bg">#333333</color>
     <color name="title_text_color">#ffffff</color>
     <color name="note_edit_bg">#c1cdc1</color>
+    <color name="grid_item_bg">#FFE4B5</color>
+    
     
     <drawable name="btn_bg_pressed">#505050</drawable>
     <drawable name="btn_bg_normal">#00000000</drawable>
