--- a/res/layout/item_list_note.xml
+++ b/res/layout/item_list_note.xml
@@ -38,7 +38,7 @@
         android:padding="10dp"
         android:clickable="true"
         android:layout_gravity="center_vertical"
-        android:visibility="invisible"
+        android:visibility="gone"
         />
 
 </RelativeLayout>
